--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-runtime": "~4.0.1",
     "elevenlabs-conversational-ai-expo-react-native": "file:",
     "expo": "~52.0.37",
+    "expo-av": "~15.0.2",
     "expo-battery": "~9.0.2",
     "expo-brightness": "~13.0.3",
     "expo-dev-client": "~5.0.12",
@@ -24,8 +25,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-av": "~15.0.2"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
